remve the service

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </section>
 
-    <section id="services" class="services">
+    <!-- <section id="services" class="services">
         <h2>Our Services</h2>
         <div class="service-items">
             <div class="service-item">
@@ -85,7 +85,7 @@
                 <p>Thrilling experiences for adventure enthusiasts.</p>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials">
